--- a/env/values.yaml
+++ b/env/values.yaml
@@ -21,6 +21,6 @@ jenkins:
   Servers:
     Global:
       EnvVars:
-        DOCKER_REGISTRY: 977254335025.dkr.ecr.us-east-1.amazonaws.com
+        DOCKER_REGISTRY: 977254335025.dkr.ecr.eu-west-1.amazonaws.com
         TILLER_NAMESPACE: kube-system
 prow: {}
